--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -30,8 +30,8 @@ $pre-color: #ff6908;
 $global-width: 580px;
 $global-width-small: 95%;
 $global-gutter: 16px;
-$body-background: $light-gray;
-$container-background: $white;
+$body-background: #CCCCCC;
+$container-background: inherit;
 $global-padding: 16px;
 $global-margin: 16px;
 $global-radius: 3px;
