--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,2 +1,15 @@
 @import 'settings';
 @import 'foundation-emails';
+
+.block {
+  
+  width: 90%;
+}
+
+.header {
+  background-color: #1FC28F;
+  h1 {
+    color: $white;
+    text-transform: uppercase;
+  }
+}
