--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -16,6 +16,7 @@
 // 1. Global
 // ---------
 
+$green-color: #1FC28F;
 $primary-color: #2199e8;
 $secondary-color: #777777;
 $success-color: #3adb76;
@@ -27,11 +28,11 @@ $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
 $pre-color: #ff6908;
-$global-width: 580px;
+$global-width: 580;
 $global-width-small: 95%;
 $global-gutter: 16px;
 $body-background: #CCCCCC;
-$container-background: inherit;
+$container-background: $white;
 $global-padding: 16px;
 $global-margin: 16px;
 $global-radius: 3px;
@@ -42,7 +43,7 @@ $global-breakpoint: $global-width + $global-gutter;
 // -------
 
 $grid-column-count: 12;
-$column-padding-bottom: $global-padding;
+$column-padding-bottom: 0;
 $container-radius: 0;
 
 // 3. Block Grid
@@ -55,7 +56,7 @@ $block-grid-gutter: $global-gutter;
 // -------------
 
 $global-font-color: $black;
-$body-font-family: Helvetica, Arial, sans-serif;
+$body-font-family: Lato, Helvetica, Arial, sans-serif;
 $global-font-weight: normal;
 $header-color: inherit;
 $global-line-height: 1.3;
