Implementing design feedback

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -16,7 +16,7 @@
 // 1. Global
 // ---------
 
-$green-color: #1FC28F;
+$green-color: #37b98f;
 $primary-color: #2199e8;
 $secondary-color: #777777;
 $success-color: #3adb76;
@@ -26,12 +26,13 @@ $light-gray: #f3f3f3;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
-$white: #fefefe;
+$white: #FFFFFF;
+$text-color: #5c5b5a;
 $pre-color: #ff6908;
 $global-width: 580;
 $global-width-small: 95%;
 $global-gutter: 16px;
-$body-background: #CCCCCC;
+$body-background: #CCCCCB;
 $container-background: $white;
 $global-padding: 16px;
 $global-margin: 16px;
